--- a/stilo.css
+++ b/stilo.css
@@ -24,6 +24,7 @@ body {
     background-color: #FFF;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, .1);
     overflow: hidden;
+    border-radius: 1px;
   }
   
   .animal h4 {
@@ -63,3 +64,4 @@ body {
     text-align: center;
     margin: 0;
   }
+
