--- a/stilo.css
+++ b/stilo.css
@@ -24,7 +24,20 @@ body {
     background-color: #FFF;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, .1);
     overflow: hidden;
+    
     border-radius: 1px;
+  }
+  section.animal{
+    height: auto;
+  }
+ div#formularios{
+    background-color: #ffffff;
+    padding: 15px;
+    width: 350px;
+    display: block;
+    margin: auto;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, .09);
+  
   }
   
   .animal h4 {
